--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Aasritha's Personal Site</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <a href="file:///C:/Users/vsaia/OneDrive/Desktop/Web%20Devolepment/HTML-Personal%20site/login.html">Back</a>
